--- a/css/styles.css
+++ b/css/styles.css
@@ -291,34 +291,34 @@ padding: 32px 0;
 text-align: center;
 }
 .icons-team{
-    display: flex;
-    justify-content: center; 
-    gap: 24px;
-    margin-top:8px;
-    
+display: flex;
+justify-content: center; 
+gap: 24px;
+margin-top:8px;
+
 }
 .icons-team-item{
-    width: 40px;
-    height: 40px;
+width: 40px;
+height: 40px;
 
 }
 .icons-item{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height:100%;
-    background-color:#4d5ae5;
-    border-radius: 50%;
-    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
+height:100%;
+background-color:#4d5ae5;
+border-radius: 50%;
+transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .icons-item:hover,
 .icons-item:focus
 {
-    background-color: #404bbf;
+background-color: #404bbf;
 }
 .icons-item-item{
-    fill:#f4f4fd;
+fill:#f4f4fd;
 }
 .head-three-third{
 font-family: "Roboto", sans-serif;
@@ -374,31 +374,31 @@ column-gap: 24px;
 }
 
 .main-section-four .list-four{
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+width: calc((100% - 48px) / 3);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .list-four:hover .overlay {
-    transform: translateY(0);
-    }
+transform: translateY(0);
+}
 .list-box{
-    position: relative;
+position: relative;
 overflow: hidden;
 }
 .overlay {
-    background-color: #4d5ae5;
-    color: #f4f4fd;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    padding: 40px 32px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    }
+background-color: #4d5ae5;
+color: #f4f4fd;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+transform: translateY(100%);
+padding: 40px 32px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
 .portfolio{
 padding: 32px 16px;
 border: 1px solid #e7e9fc;
@@ -429,14 +429,14 @@ line-height: 1.6;
 padding: 100px 0;
 }
 .footer-container{
-    display: flex;
-    align-items: baseline;
+display: flex;
+align-items: baseline;
 }
 .logo-par{
-    margin-right: 120px
+margin-right: 120px
 }
 .soc-media{
-    margin-right:80px;
+margin-right:80px;
 }
 .logo-footer{
 font-family: "Raleway", sans-serif;
@@ -460,12 +460,12 @@ color: #f4f4fd;
 display: inline-block;
 }
 .social-footer{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color:#FFFFFF;
-    margin-bottom: 16px;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color:#FFFFFF;
+margin-bottom: 16px;
 }
 .soc-media{
 display: flex;
@@ -473,31 +473,31 @@ flex-direction: column;
 fill: #f4f4fd;
 }
 .social-media{
-    fill:#f4f4fd;
+fill:#f4f4fd;
 }
 .footer-icons{
-    display: flex; 
-    gap: 16px;
+display: flex; 
+gap: 16px;
 }
 .footer-icons-social{
-    width: 40px;
-    height: 40px;
+width: 40px;
+height: 40px;
 }
 .footer-social{
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+display: flex;
+align-items: center;
+justify-content: center; 
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .footer-social:hover,
 .footer-social:focus
 {
-    background-color: #31d0aa; 
+background-color: #31d0aa; 
 }
 .footer .par-footer{
 font-family: "Roboto", sans-serif;
@@ -508,98 +508,303 @@ letter-spacing: 0.02em;
 color: #f4f4fd;
 max-width: 264px;
 }
-.button-subscribe{
-    background-color:#4d5ae5;
+.subscribe {
+margin-left: 80px;
 }
-.subscribe-footer{
-    margin-bottom: 16px;
-    font-weight: 500; 
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff; 
+.subscribe-text {
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.02em;
+color: #fff;
+margin-bottom: 16px;
 }
-.subscribe-email{
-    display: flex;
-    gap: 24px;
-
+.subscribe-email {
+display: flex;
+gap: 24px;
 }
-
-.input-subscribe{
-    width: 264px; 
-    height: 40px; 
-    border: 1px solid #ffffff; 
-    background-color: transparent;
-    font-size: 12px; 
-    line-height: 2;
-    letter-spacing: 0.04em;
-    padding-left: 16px; 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
-    border-radius: 4px; 
-    color: #ffffff;
+.form-label-subscribe {
+display: flex;
 }
-.input-subscribe::placeholder{
-    color: #ffffff;
+.input-subscribe {border-radius: 4px;font-weight: 400;font-size: 12px;line-height: 200%;letter-spacing: 0.04em;color: #fff;border: 1px solid #fff;width: 264px;height: 40px;box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);padding-left: 16px;background-color: #2e2f42;background-color: transparent;}
+.input-subscribe::placeholder {
+color: #ffffff;
 }
-.button-subscribe{
+.button-subscribe {
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: "Roboto", sans-serif;
-    min-width: 165px; 
-    height: 40px;
-    font-size: 16px; 
     font-weight: 500;
-    line-height: 1.5 ;
+    font-size: 16px;
+    line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    background-color: #4D5AE5;
-    border: none; 
+    text-align: center;
+    color: #fff;
+    background: #4d5ae5;
     border-radius: 4px;
+    padding: 8px 24px;
+    height: 40px;
+    cursor: pointer;
+    box-sizing: border-box;
+    border: none;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    min-width: 165px;
 }
-.icon-frame{
-    margin-left: 16px;
+.icon-frame {
+width: 24px;
+height: 24px;
+fill: #fff;
+margin-left: 16px;
 }
-.modal-overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.button-subscribe:hover,
+.button-subscribe:focus {
+background: #404bbf;
+}
+.modal-overlay {
+display: flex;
+align-items: center;
+justify-content: center;
+opacity: 1;
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 999;
+background-color: rgba(46, 47, 66, 0.4);
+pointer-events: auto;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-overlay {
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
+}
+.modal-overlay.is-open {
+opacity: 1;
+pointer-events: auto;
+visibility: visible;
 }
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 408px;
-    min-height: 584px; 
-    background: #fcfcfc; 
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
-    border-radius: 4px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #fcfcfc;
+border-radius: 4px;
+width: 408px;
+min-height: 584px;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 72px 24px 24px 24px;
 }
-.button-send{
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%; 
-    display: flex;
-    align-items: center; 
-    justify-content:center;
-    background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1); 
-    padding: 0; 
-    cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.close-button {
+border: 4px;
+width: 24px;
+height: 24px;
+position: absolute;
+top: 24px;
+right: 24px;
+cursor: pointer;
+background: none;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 0;
+border-radius: 50%;
+fill: #2e2f42;
+background-color: #e7e9fc;
+border: 1px solid rgba(0, 0, 0, 0.1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-button:hover {
+background-color: #404bbf;
+fill: #ffffff;
+border: none;
+}
+.close-button:focus {
+background-color: #404bbf;
+border: none;
+fill: #ffffff;
+}
+.icons-close {
+width: 8px;
+height: 8px;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icons-close:hover {
+fill: #ffffff;
+}
+.icons-close:focus {
+fill: #ffffff;
+}
+.modal-text {
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-bottom: 16px;
+}
+.form-adress {
+display: flex;
+flex-direction: column;
+}
+.form-contacts {
+position: relative;
+margin-bottom: 8px;
+}
+.label {
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+color: #8e8f99;
+display: block;
+margin-bottom: 4px;
+}
+.form-contacts-container {
+position: relative;
+}
+.input {
+border: 1px solid #4d5ae5;
+border-radius: 4px;
+width: 100%;
+height: 40px;
+background-color: transparent;
+padding-left: 38px;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+border: 1px solid rgba(46, 47, 66, 0.4);
+background-color: transparent;
+}
 
+.input:focus {
+border-color: #4d5ae5;
+fill: #4d5ae5;
 }
-.button-send:hover
-.button-send:focus{
-    background-color: #404bbf; 
-    border: none;
+.icon-image {
+width: 18px;
+height: 24px;
+position: absolute;
+fill: #2e2f42;
+pointer-events: none;
+top: 50%;
+left: 16px;
+transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-image:focus {
+fill: #4d5ae5;
+}
+.input:focus + .icon-image {
+fill: #4D5AE5;
+}
+.form-contacts-comment {
+margin-bottom: 16px;
+}
+.input-comment {
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+color: #8e8f99;
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+background-color: transparent;
+padding: 8px 16px;
+outline: transparent;
+resize: none;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+width: 360px;
+height: 120px;
+color: rgba(46, 47, 66, 0.4);
+}
+.input-comment:focus {
+border-color: #4d5ae5;
+}
+.privacy-container {
+    margin-bottom: 24px;
+}
+.visually-hidden {
+position: absolute;
+width: 1px;
+height: 1px;
+padding: 0;
+margin: -1px;
+overflow: hidden;
+clip: rect(0, 0, 0, 0);
+border: 0;
+}
+.checkbox {
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+color: #8e8f99;
+cursor: pointer;
+}
+.privacy {
+text-decoration: underline;
+text-decoration-skip-ink: none;
+color: #4d5ae5;
+}
+input[type="checkbox"]:checked+.checkbox .label-checkbox {
+background-color: #404bbf;
+border: none;
+fill: #f4f4fd;
+}
+input[type="checkbox"]:checked+.checkbox .icon-checkbox {
+display: block;
+fill: #f4f4fd;
+}
+.label-checkbox {
+width: 16px;
+height: 16px;
+border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+fill: transparent;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+display: inline-flex;
+align-items: center;
+justify-content: center;
+margin-right: 8px;
+position: relative;
+}
+.icon-checkbox {
+
+width: 10px;
+height: 8px;
+}
+.button-send {
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.04em;
+text-align: center;
+color: #fff;
+display: block;
+border-radius: 4px;
+padding: 16px 32px;
+min-width: 169px;
+height: 56px;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background: #4d5ae5;
+cursor: pointer;
+border: none;
+margin-left: auto;
+margin-right: auto;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-send:hover {
+background-color: #404bbf;
 }
