--- a/css/styles.css
+++ b/css/styles.css
@@ -511,7 +511,7 @@ max-width: 264px;
 .subscribe {
 margin-left: 80px;
 }
-.subscribe-text {
+.subscribe-footer {
 font-family: "Roboto", sans-serif;
 font-weight: 500;
 font-size: 16px;
